--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Prevent .forEach(async code",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --ext js,json",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -15,6 +16,20 @@
   ],
   "author": "Kelly Selden",
   "license": "MIT",
+  "devDependencies": {
+    "@kellyselden/node-template": "4.0.0",
+    "chai": "^4.3.7",
+    "eslint": "^8.44.0",
+    "eslint-config-sane": "^1.0.2",
+    "eslint-config-sane-node": "^1.1.1",
+    "eslint-plugin-json-files": "^3.0.0",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prefer-let": "^3.0.1",
+    "mocha": "^10.2.0",
+    "mocha-helpers": "^8.0.0",
+    "renovate-config-standard": "2.1.2"
+  },
   "bugs": {
     "url": "https://github.com/kellyselden/eslint-rule-no-async-in-foreach/issues"
   },
