fix: specify correct peer dep on eslint
Needs 8.40 to support context.sourceCode

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   ],
   "author": "Kelly Selden",
   "license": "MIT",
+  "peerDependencies": {
+    "eslint": ">=8.40.0"
+  },
   "devDependencies": {
     "@kellyselden/node-template": "4.0.0",
     "chai": "^4.3.7",
