--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "eslint-plugin-prefer-let": "^3.0.1",
     "mocha": "^10.2.0",
     "mocha-helpers": "^8.0.0",
-    "renovate-config-standard": "2.1.2"
+    "renovate-config-standard": "2.1.2",
+    "standard-node-template": "4.1.0"
   },
   "bugs": {
     "url": "https://github.com/kellyselden/eslint-plugin-no-async-in-foreach/issues"
   },
   "homepage": "https://github.com/kellyselden/eslint-plugin-no-async-in-foreach#readme",
   "engines": {
-    "node": ">=16.13"
+    "node": ">=18.12"
   }
 }
